<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.app.petron.altimetrogps.MainActivity"
    tools:showIn="@layout/activity_main"
    android:padding="16dp">



        <TextView android:id="@+id/lblAltitud"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/altitud"
            android:textColor="@color/icons"
            android:textAppearance="@android:style/TextAppearance.Large"
            android:gravity="center"
            android:layout_gravity="center_horizontal" />

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="0.3">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/metros"
            android:id="@+id/tvmetros"
            android:textColor="@color/icons"
            android:layout_weight="1" />

        <Switch
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/switch1"
            android:layout_weight="1"
            android:layout_marginRight="60dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/pies"
            android:id="@+id/tvpies"
            android:textColor="@color/icons"
            android:layout_weight="1" />

    </LinearLayout>



    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="bottom"
        android:layout_weight="2">

        <ToggleButton android:id="@+id/btnActualizar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textOn="@string/parar_actualizaciones"
            android:textOff="@string/iniciar_actualizaciones"
            android:layout_gravity="center_horizontal" />
    </LinearLayout>

    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_gravity="center_horizontal"
        android:layout_weight="0.3">

        <TextView android:id="@+id/lblLatitud"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/latitud"
            android:textColor="@color/icons"
           android:layout_weight="1"
             />

        <TextView android:id="@+id/lblLongitud"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/longitud"
            android:textColor="@color/icons"
            android:layout_weight="1" />

    </LinearLayout>

</LinearLayout>
